[gd_scene load_steps=9 format=3 uid="uid://5aotl6ngfxw2"]

[ext_resource type="Script" uid="uid://do8tr0csydapw" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://beqowio6jap42" path="res://parallax_background.gd" id="1_glbon"]
[ext_resource type="Texture2D" uid="uid://c650jpokvhw15" path="res://assets/world/background.png" id="1_jix8l"]
[ext_resource type="Texture2D" uid="uid://b2oq502hhc4j5" path="res://assets/world/galaxy_black_hole.png" id="2_glbon"]
[ext_resource type="Texture2D" uid="uid://cnpai7pejkkim" path="res://assets/main_menu/moon.png" id="4_qe12f"]
[ext_resource type="Texture2D" uid="uid://dq68uuug1rmbc" path="res://assets/main_menu/title.png" id="5_8qtwp"]
[ext_resource type="Theme" uid="uid://b3fa8735odogg" path="res://assets/main_menu/menu_buttons.tres" id="8_8qtwp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe12f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[node name="main_menu" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_glbon")

[node name="stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(640, 360)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/stars"]
position = Vector2(320, 180)
texture = ExtResource("1_jix8l")

[node name="galaxies" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(640, 360)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/galaxies"]
position = Vector2(322, 180)
texture = ExtResource("2_glbon")

[node name="moon" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/moon"]
position = Vector2(319, 179)
texture = ExtResource("4_qe12f")

[node name="title" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/title"]
position = Vector2(321, 180)
texture = ExtResource("5_8qtwp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7vrkn")

[node name="menu" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 69.0
offset_top = 119.0
offset_right = 204.0
offset_bottom = 233.0

[node name="startgame" type="Button" parent="Control/menu"]
layout_mode = 2
theme = ExtResource("8_8qtwp")
theme_override_styles/focus = SubResource("StyleBoxFlat_qe12f")
text = "Start"

[node name="options" type="Button" parent="Control/menu"]
layout_mode = 2
theme = ExtResource("8_8qtwp")
text = "Options"

[node name="quit" type="Button" parent="Control/menu"]
layout_mode = 2
theme = ExtResource("8_8qtwp")
text = "Quit"

[connection signal="focus_entered" from="Control/menu/startgame" to="Control" method="_on_startgame_focus_entered"]
[connection signal="pressed" from="Control/menu/startgame" to="Control" method="_on_startgame_pressed"]
[connection signal="pressed" from="Control/menu/options" to="Control" method="_on_options_pressed"]
[connection signal="pressed" from="Control/menu/quit" to="Control" method="_on_quit_pressed"]
